--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "rxjs": "7.2.0",
     "socket.io": "4.5.0",
     "swagger-ui-express": "4.3.0",
-    "typeorm": "0.2.41",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "ws": "8.6.0"
   },
