update account mail sender

--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ REDIS_HOST=localhost
 JWT_SECRET_KEY=haha
 EXPIRES_TIME=9999999999
 
-MAIL_USER=
-MAIL_PASSWORD=
+MAIL_USER=ha.tq176016@sis.hust.edu.vn
+MAIL_PASSWORD=Matkhau123123
 
 FE_URL=http://localhost:3000
 
